fix font size getting too big for dial

--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-style: normal;
   font-weight: 800;
+  font-size: 16px;
   /* font-size: 30px; changed inside dial.jsx */
   letter-spacing: 2px;
 
